# tuindeed

./: .gitignore  README.md  pyproject.toml
tuindeed/: __main__.py  base_screen.tcss  jobapp.py  tools.py
